objects/signaturit__SIG_SignaturitSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>signaturit__Expiration__c</fullName>
        <description>If the request expires</description>
        <inlineHelpText>Si el proceso de firma tiene caducidad.</inlineHelpText>
        <label>Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Expiration_date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If expiration is set, the number of days to expiration</description>
        <inlineHelpText>Si la caducidad está añadida, el numero de días hasta la fecha.</inlineHelpText>
        <label>Days to Expiration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__Reminder__c</fullName>
        <description>Default reminder to set (picklist)</description>
        <inlineHelpText>Recordatorio predeterminado (lista de selección).</inlineHelpText>
        <label>Reminder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Reminder_days__c</fullName>
        <description>Days of the week to send the reminder</description>
        <inlineHelpText>Días de la semana para enviar el recordatorio.</inlineHelpText>
        <label>Reminder Days</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__SIG_SaveDocumentsInSalesforce__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Store documents in Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__SaveAuditTrailInSalesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Audit Trail In Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__SaveSignedInSalesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Save signed documents in Salesforce</description>
        <inlineHelpText>Guardar los documentos firmados en Salesforce.</inlineHelpText>
        <label>Save Signed In Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__SignType__c</fullName>
        <description>Default sign type (picklist)</description>
        <inlineHelpText>Tipo de firma por defecto (lista de selección).</inlineHelpText>
        <label>Sign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__SignatureType__c</fullName>
        <description>Signature type to use in the process</description>
        <inlineHelpText>Tipo de firma para usar en el proceso.</inlineHelpText>
        <label>SignatureType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Use_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__Use_User_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if use the user token for the Signaturit connection. true --&gt; Use User token, False--&gt; Use Global Token</description>
        <label>Use User Token</label>
        <type>Checkbox</type>
    </fields>
    <label>Signaturit Settings</label>
</CustomObject>